add user api to get user
