# routes/api.php
@@ -50,6 +50,7 @@ Route::group(['middleware' => 'auth:api'], static function () {
     Route::group(['middleware' =>  "permission:$canViewAdminPages"], function() {
         Route::group(['prefix' => 'users'], function() {
             Route::get('/', [UserController::class, 'users']);
+            Route::get('/{user_id}', [UserController::class, 'getUser']);
         });
     });
 });
